dnl Process this file with autoconf to produce a configure script.
AC_INIT(make_gnome_freecell_board.c)
AM_INIT_AUTOMAKE(fc-solve-board-gen, [`cat ../ver.txt`])

PACKAGE=freecell-solver


dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
dnl AC_CHECK_LIB(m, main)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
