INSTALL(
    FILES
        "abra-kadabra.sh"
        "blue-yonder.sh"
        "children-playing-ball.sh"
        "cool-jives.sh"
        "crooked-nose.sh"
        "fools-gold.sh"
        "foss-nessy.sh"
        "gooey-unknown-thing.sh"
        "hello-world.sh"
        "john_galt_line-500.sh"
        "rin-tin-tin.sh"
        "sand-stone.sh"
        "sentient-pearls.sh"
        "tea-for-two.sh"
        "the-iglu-cabal.sh"
        "toons-for-twenty-somethings.sh"
        "yellow-brick-road.sh"
    DESTINATION
        "${PKGDATADIR}/presets"
)
