INSTALL(
    FILES
        "abra-kadabra.sh"
        "amateur-star.sh"
        "blue-yonder.sh"
        "children-playing-ball.sh"
        "conspiracy-theory.sh"
        "cookie-monster.sh"
        "cool-jives.sh"
        "crooked-nose.sh"
        "enlightened-ostrich.sh"
        "fools-gold.sh"
        "foss-nessy.sh"
        "gooey-unknown-thing.sh"
        "hello-world.sh"
        "john_galt_line-500.sh"
        "looking-glass.sh"
        "maliciously-obscure.sh"
        "micro-finance.sh"
        "micro-finance-improved.sh"
        "one-big-family.sh"
        "qualified-seed.sh"
        "rin-tin-tin.sh"
        "sand-stone.sh"
        "sentient-pearls.sh"
        "tea-for-two.sh"
        "the-iglu-cabal.sh"
        "three-eighty.sh"
        "toons-for-twenty-somethings.sh"
        "video-editing.sh"
        "yellow-brick-road.sh"
    DESTINATION
        "${RELATIVE_PKGDATADIR}/presets"
)
